force-app/main/default/objects/Opportunity_Snapshot__c/fields/Account_NameiD__c.field-meta.xml
<CustomField>
    <fullName>Account_NameiD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Snapshots</relationshipLabel>
    <relationshipName>Opportunity_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>