force-app/main/default/objects/Opportunity_Snapshot__c/fields/Account_OwnerID__c.field-meta.xml
<CustomField>
    <fullName>Account_OwnerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>