force-app/main/default/objects/Opportunity_Snapshot__c/fields/Agency_NameID__c.field-meta.xml
<CustomField>
    <fullName>Agency_NameID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Snapshots (Agency NameID)</relationshipLabel>
    <relationshipName>Opportunity_Snapshots1</relationshipName>
    <type>Lookup</type>
</CustomField>