force-app/main/default/objects/Opportunity_Snapshot__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Programmatic</fullName>
            </value>
            <value>
                <fullName>Publisher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>