force-app/main/default/objects/Opportunity_Snapshot__c/fields/Opportunity_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_18_Digit_ID__c</fullName>
    <label>Opportunity 18 Digit ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>