force-app/main/default/objects/Opportunity_Snapshot__c/fields/Snap_Date__c.field-meta.xml
<CustomField>
    <fullName>Snap_Date__c</fullName>
    <description>Used only for backloading Scotts numbers!</description>
    <label>Snap Date</label>
    <type>Date</type>
</CustomField>