force-app/main/default/objects/Opportunity_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_NameiD__c</columns>
    <columns>Opportunity_NameID__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Opportunity_Record_Type__c</columns>
    <columns>Probability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Record_Type__c</field>
        <operation>equals</operation>
        <value>Advertising</value>
    </filters>
    <label>All</label>
</ListView>